ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/powerDNS/deployment_3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations: {}
  labels:
    name: powerdns
  name: powerdns
  namespace: kubeprod
spec:
  minReadySeconds: 30
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: powerdns
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations: {}
      labels:
        name: powerdns
    spec:
      containers:
      - args:
        - --api-key=$(POWERDNS_API_KEY)
        - --slave=yes
        command:
        - /scripts/powerdns.sh
        image: psitrax/powerdns:v4.2.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: api
        name: pdns
        ports:
        - containerPort: 8081
          name: api
          protocol: TCP
        - containerPort: 53
          name: dns-tcp
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        readinessProbe:
          httpGet:
            path: /
            port: api
        securityContext:
          runAsUser: 0
        stdin: false
        tty: false
        volumeMounts:
        - mountPath: /scripts
          name: scripts
          readOnly: true
        - mountPath: /etc/pdns/pdns.conf
          name: secret
          readOnly: true
          subPath: pdns.conf
      imagePullSecrets: []
      terminationGracePeriodSeconds: 30
      volumes:
      - configMap:
          name: powerdns-7560389
        name: schema
      - configMap:
          defaultMode: 493
          name: powerdns-sh-f727feb
        name: scripts
      - name: secret
        secret:
          secretName: powerdns-77ede1a
