ansible-k8s/roles/bitnami-kube-prod-runtime/splitted_manifests/powerDNS/service_3.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    name: powerdns
  name: powerdns
  namespace: kubeprod
spec:
  ports:
  - name: api
    port: 8081
    protocol: TCP
  - name: dns-tcp
    port: 53
    protocol: TCP
  - name: dns-udp
    port: 53
    protocol: UDP
  selector:
    name: powerdns
  type: ClusterIP
